--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #343a40;
+  background-color: #24282c;
   color: aliceblue;
 }
 
@@ -7,7 +7,13 @@ h4, a{
   color: yellow;
 }
 
+textarea {
+  width: 90vw;
+  white-space: pre;
+}
+
 .code {
+  background-color: #343a40;
   color: #7ec699;
 }
 
