--- a/style.css
+++ b/style.css
@@ -24,3 +24,18 @@ textarea {
 .indent2 {
   text-indent: 40px;
 }
+
+input {
+  border: 2px solid #000;
+  margin-bottom: 15px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+input:invalid {
+  border-color: red;
+}
+
+input:valid {
+  border-color: green;
+}
