--- a/Styles/style-CSS-GRID.css
+++ b/Styles/style-CSS-GRID.css
@@ -14,3 +14,102 @@
 .container2 div, .container1 div{
   border: 1px solid white;
 }
+
+.container3 {
+  display: grid;
+  grid-template-rows: 100px 100px 100px;
+  grid-template-columns: 100px 100px 100px;
+}
+
+.item {
+  background-color: orange;
+  border: 1px solid black;
+  text-align: center;
+}
+
+.first-row {
+  background-color: pink;
+}
+
+.last-column {
+  background-color: lightblue;
+}
+
+.container4 {
+  display: inline-grid;
+  grid-template: 40px 40px 40px 40px 40px / 40px 40px 40px 40px 40px;
+  background-color: lightblue; 
+}
+
+.room {
+  border: 1px solid;
+  font-size: 60%;
+  text-align: center;
+}
+
+.container4 #living-room {
+  grid-area: 1/1/3/6;
+}
+
+.container4 #kitchen {
+  grid-area: 3/4/6/6;
+}
+
+.container4 #bedroom {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+
+.container4 #bathroom {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 6;
+}
+
+.container4 #closet {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 5;
+  grid-row-end: 6;
+}
+
+.container5 {
+  display: inline-grid;
+  grid-template: 40px 40px 40px 40px 40px / 40px 40px 40px 40px 40px;
+  background-color: lightblue; 
+  grid-template-areas:
+    "living-room living-room living-room living-room living-room"
+    "living-room living-room living-room living-room living-room"
+    "bedroom bedroom bathroom kitchen kitchen"
+    "bedroom bedroom bathroom kitchen kitchen"
+    "closet closet . . ."    
+}
+
+.room {
+  border: 1px solid;
+  font-size: 50%;
+  text-align: center;
+}
+
+.container5 #living-room {
+   grid-area:  living-room;
+}
+
+.container5 #kitchen {
+  grid-area: kitchen;
+}
+
+.container5 #bedroom {
+  grid-area: bedroom;
+}
+
+.container5 #bathroom {
+  grid-area: bathroom;
+}
+
+.container5 #closet {
+  grid-area: closet;
+}
