--- a/Styles/style-CSS-GRID.css
+++ b/Styles/style-CSS-GRID.css
@@ -40,35 +40,29 @@
   grid-template: 40px 40px 40px 40px 40px / 40px 40px 40px 40px 40px;
   background-color: lightblue; 
 }
-
 .room {
   border: 1px solid;
   font-size: 60%;
   text-align: center;
 }
-
 .container4 #living-room {
   grid-area: 1/1/3/6;
 }
-
 .container4 #kitchen {
   grid-area: 3/4/6/6;
 }
-
 .container4 #bedroom {
   grid-column-start: 2;
   grid-column-end: 4;
   grid-row-start: 3;
   grid-row-end: 5;
 }
-
 .container4 #bathroom {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 3;
   grid-row-end: 6;
 }
-
 .container4 #closet {
   grid-column-start: 2;
   grid-column-end: 4;
@@ -77,7 +71,7 @@
 }
 
 .container5 {
-  display: inline-grid;
+  display: grid;
   grid-template: 40px 40px 40px 40px 40px / 40px 40px 40px 40px 40px;
   background-color: lightblue; 
   grid-template-areas:
@@ -87,29 +81,84 @@
     "bedroom bedroom bathroom kitchen kitchen"
     "closet closet . . ."    
 }
-
 .room {
   border: 1px solid;
   font-size: 50%;
   text-align: center;
 }
-
 .container5 #living-room {
    grid-area:  living-room;
 }
-
 .container5 #kitchen {
   grid-area: kitchen;
 }
-
 .container5 #bedroom {
   grid-area: bedroom;
 }
-
 .container5 #bathroom {
   grid-area: bathroom;
 }
-
 .container5 #closet {
   grid-area: closet;
+}
+
+.grid-container1 {
+  resize: both;
+  overflow: auto;
+  display: grid;
+  gap: 4px;
+  padding: 4px;
+  border: 1px solid grey;
+  background-color: skyblue;
+  grid-template: 100px 2fr repeat(2, 1fr)/repeat(1, max(150px,50%)) repeat(2, minmax(150px, 200px));
+}
+.grid-item {
+  background-color: #444;
+  text-align: center;
+  color: #ddd;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  padding: 12px;
+}
+.grid-container1 p {
+  margin: 12px auto 24px;
+}
+.grid-container1 img {
+  height: 60px;
+}
+
+.grid-container2 {
+  resize: both;
+  overflow: auto;
+  display: grid;
+  gap: 4px;
+  padding: 4px;
+  border: 1px solid grey;
+  background-color: skyblue;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+.grid-container2 p {
+  margin: 12px auto 24px;
+}
+.grid-container2 img {
+  height: 60px;
+}
+
+.grid-container3 {
+  resize: both;
+  overflow: auto;
+  display: grid;
+  gap: 4px;
+  padding: 4px;
+  border: 1px solid grey;
+  background-color: skyblue;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+}
+.grid-container3 p {
+  margin: 12px auto 24px;
+}
+.grid-container3 img {
+  height: 60px;
 }
